Add start timer

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 
         	<span class="moves">0</span> Moves
 
+        	<span class="timer">
+        		<label id="minutes">00</label>:<label id="seconds">00</label>
+        	</span>
+
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
