Add Congratulations Pop-up

--- a/index.html
+++ b/index.html
@@ -84,6 +84,51 @@
                 <i class="fa fa-cube"></i>
             </li>
         </ul>
+
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
+
+        	<!-- Modal content -->
+        	<div class="modal-content">
+        		<span class="close">&times;</span>
+        		<div class="header-modal">
+        			<div id="star-image">
+        				<img src="img/if_icon-34-award_315741.svg" alt="Star image">
+        			</div>
+        			<div class="congrat">
+        				<h1>Congratulations!!!</h1>
+        			</div>
+        		</div>
+        		<table>
+        			<tr>
+        				<td class="left">
+        					<p>You finished it in: </p>
+        				</td>
+        				<td>
+        					<p class="counder-moves"></p>
+        				</td>
+        			</tr>
+        			<tr>
+        				<td class="left">
+        					<p>Your time is: </p>
+        				</td>
+        				<td>
+        					<p class="score-time"></p>
+        				</td>
+        			</tr>
+        			<tr>
+        				<td class="left">
+        					<p>Your remained stars: </p>
+        				</td>
+        				<td>
+        					<p class="score-stars"></p>
+        				</td>
+        			</tr>
+        		</table>
+        	</div>
+
+        </div>
+
     </div>
 
     <script src="js/app.js"></script>
