--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <title>Matching Game</title>
     <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
+    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda|Monoton|Inconsolata">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
 
@@ -92,7 +94,7 @@
         	<div class="modal-content">
         		<span class="close">&times;</span>
         		<h1 class="congrat-title">Congratulations!</h2>
-        		<p class="congrat-message">You won!</p>
+        		<p class="congrat-message">You won the game!</p>
         		<div>
         			<p class="congrat-time">Time:</p>
         			<span id="timeCounter">00 : 00</span>
