Add skelet for leaderBoard

--- a/index.html
+++ b/index.html
@@ -111,11 +111,34 @@
         				<li id="star3-show"><i class="fa fa-star"></i></li>
         			</ul>
         		</div>
+        		<div>
+        			<div>
+        				<p>Please enter your name: </p>
+        				<input type="text" placeholder="Type your name">
+        				<button>Save</button>
+        			</div>
+        		</div>
         		<hr>
         		<button class="resetGame">Play again</button>
         	</div>
 
         </div>
+
+        <!-- LeaderBoard -->
+
+        <div class="leaderboard" id="leaderboard">
+        	<div class="leaderboard-content">
+        		<p>Your scores</p>
+        		<table id="leaderboard-table">
+        			<tr>
+        				<th>Name</th>
+        				<th>Time</th>
+        				<th>Moves</th>
+        			</tr>
+        		</table>
+        	</div>
+        </div>
+
 
     </div>
 
