Add functionality to Leaderboard

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         		<div>
         			<div>
         				<p>Please enter your name: </p>
-        				<input type="text" placeholder="Type your name">
-        				<button>Save</button>
+        				<input id="inputName" type="text" placeholder="Type your name">
+        				<button id="saveNameBtn">Save</button>
         			</div>
         		</div>
         		<hr>
