--- a/index.html
+++ b/index.html
@@ -1,147 +1,149 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Matching Game</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda|Monoton|Inconsolata">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="stylesheet" href="css/responsive.css">
+	<meta charset="utf-8">
+	<title>Matching Game</title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+	<link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda|Monoton|Inconsolata">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+	<link rel="stylesheet" href="css/app.css">
+	<link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
 
-    <div class="container">
-        <header>
-            <h1>Matching Game</h1>
-        </header>
+	<div class="container">
+		<header>
+			<h1>Matching Game</h1>
+		</header>
 
-        <section class="score-panel">
-        	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        	</ul>
+		<section class="score-panel">
+			<ul class="stars">
+				<li><i class="fa fa-star"></i></li>
+				<li><i class="fa fa-star"></i></li>
+				<li><i class="fa fa-star"></i></li>
+			</ul>
 
-        	<span class="moves">0</span> Moves
+			<span class="moves">0</span> Moves
 
-        	<span class="timer">
-        		<label id="minutes">00</label>:<label id="seconds">00</label>
-        	</span>
+			<span class="timer">
+				<label id="minutes">00</label>:<label id="seconds">00</label>
+			</span>
 
-            <div class="restart">
-        		<i class="fa fa-repeat"></i>
-        	</div>
-        </section>
+			<div class="restart">
+				<i class="fa fa-repeat"></i>
+			</div>
+		</section>
 
-        <ul class="deck">
-            <li class="card">
-                <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bolt"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-leaf"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bicycle"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-leaf"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card open show">
-                <i class="fa fa-bolt"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-bicycle"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>
-        </ul>
+		<ul class="deck">
+			<li class="card">
+				<i class="fa fa-diamond"></i>
+			</li>
+			<li class="card">
+				<i class="fa fa-paper-plane-o"></i>
+			</li>
+			<li class="card match">
+				<i class="fa fa-anchor"></i>
+			</li>
+			<li class="card">
+				<i class="fa fa-bolt"></i>
+			</li>
+			<li class="card">
+				<i class="fa fa-cube"></i>
+			</li>
+			<li class="card match">
+				<i class="fa fa-anchor"></i>
+			</li>
+			<li class="card">
+				<i class="fa fa-leaf"></i>
+			</li>
+			<li class="card">
+				<i class="fa fa-bicycle"></i>
+			</li>
+			<li class="card">
+				<i class="fa fa-diamond"></i>
+			</li>
+			<li class="card">
+				<i class="fa fa-bomb"></i>
+			</li>
+			<li class="card">
+				<i class="fa fa-leaf"></i>
+			</li>
+			<li class="card">
+				<i class="fa fa-bomb"></i>
+			</li>
+			<li class="card open show">
+				<i class="fa fa-bolt"></i>
+			</li>
+			<li class="card">
+				<i class="fa fa-bicycle"></i>
+			</li>
+			<li class="card">
+				<i class="fa fa-paper-plane-o"></i>
+			</li>
+			<li class="card">
+				<i class="fa fa-cube"></i>
+			</li>
+		</ul>
 
-        <!-- The Modal Congratulation PopUp -->
-        <div id="myModal" class="modal">
+		<h3 id="showLeaderBoardButton">LeaderBoard</h3>
 
-        	<!-- Modal content -->
-        	<div class="modal-content">
-        		<span class="close">&times;</span>
-        		<h1 class="congrat-title">Congratulations!</h2>
-        		<p class="congrat-message">You won the game!</p>
-        		<div>
-        			<p class="congrat-time">Time:</p>
-        			<span id="timeCounter">00 : 00</span>
-        		</div>
-        		<div>
-        			<p class="congrat-moves">Moves:</p>
-        			<span id='movesCounter'>0</span>
-        		</div>
-        		<div>
-        			<p class="congrat-stars">Stars:</p>
-        			<ul class="starsCounter">
-        				<li><i class="fa fa-star"></i></li>
-        				<li id="star2-show"><i class="fa fa-star"></i></li>
-        				<li id="star3-show"><i class="fa fa-star"></i></li>
-        			</ul>
-        		</div>
-        		<div>
-        			<div>
-        				<p>Please enter your name: </p>
-        				<input id="inputName" type="text" placeholder="Type your name">
-        				<button id="saveNameBtn">Save</button>
-        			</div>
-        		</div>
-        		<hr>
-        		<button class="resetGame">Play again</button>
-        	</div>
+		<!-- The Modal Congratulation PopUp -->
+		<div id="myModal" class="modal">
 
-        </div>
+			<!-- Modal content -->
+			<div class="modal-content">
+				<span class="close">&times;</span>
+				<h1 class="congrat-title">Congratulations!</h2>
+					<p class="congrat-message">You won the game!</p>
+					<div>
+						<p class="congrat-time">Time:</p>
+						<span id="timeCounter">00 : 00</span>
+					</div>
+					<div>
+						<p class="congrat-moves">Moves:</p>
+						<span id='movesCounter'>0</span>
+					</div>
+					<div>
+						<p class="congrat-stars">Stars:</p>
+						<ul class="starsCounter">
+							<li><i class="fa fa-star"></i></li>
+							<li id="star2-show"><i class="fa fa-star"></i></li>
+							<li id="star3-show"><i class="fa fa-star"></i></li>
+						</ul>
+					</div>
+					<div>
+						<div>
+							<p>Please enter your name: </p>
+							<input id="inputName" type="text" placeholder="Type your name">
+							<button id="saveNameBtn">Save</button>
+						</div>
+					</div>
+					<hr>
+					<button class="resetGame">Play again</button>
+				</div>
 
-        <!-- LeaderBoard -->
+			</div>
 
-        <div class="leaderboard" id="leaderboard">
-        	<div class="leaderboard-content">
-        		<p>Your scores</p>
-        		<table id="leaderboard-table">
-        			<tr>
-        				<th>Name</th>
-        				<th>Time</th>
-        				<th>Moves</th>
-        			</tr>
-        		</table>
-        	</div>
-        </div>
+			<!-- LeaderBoard -->
+
+			<div class="leaderboard" id="leaderboard">
+				<div class="leaderboard-content">
+					<p>Your scores</p>
+					<table id="leaderboard-table">
+						<tr>
+							<th>Name</th>
+							<th>Time</th>
+							<th>Moves</th>
+						</tr>
+					</table>
+				</div>
+			</div>
 
 
-    </div>
+		</div>
 
-    <script src="js/app.js"></script>
-</body>
-</html>
+		<script src="js/app.js"></script>
+	</body>
+	</html>
